# autohelper

./: .gitignore  alembic.ini  autohelper.toml  pyproject.toml
.github/workflows/: cqa.yml
autohelper/: __init__.py  __main__.py  activities.py  app.py  db.py  settings.py
autohelper/abstract/: channels.py
autohelper/features/: __init__.py  activities.py  channels.py
autohelper/framework/: __init__.py  app.py  app_settings.py  boilerplate.py  db.py  debugging.py  features.py  settings.py  utils.py
autohelper/migrations/: env.py  script.py.mako
projects/gauss/: bot.py  channels.py
projects/gauss/features/: channels.py
tests/: test_config.toml
tests/test_framework/: sample_module.py  test_debugging.py
